data/derived/comb/progs/unify/prog1400.ml.out
Characters 2-4:
  5*2.;;
    ^^
Error: This expression has type float but an expression was expected of type
         int
